force-app/main/default/objects/Project_Charter__c.object
<CustomObject>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Assigned_User__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Assigned_User__c</referenceTo>
        <relationshipLabel>Step 1: Project Charter</relationshipLabel>
        <relationshipName>Step_1_Project_Charter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Plan__c</fullName>
        <label>End Plan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hashtag__c</fullName>
        <label>Hashtag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Id, &quot;Project Charter&quot;, &quot;_self&quot;)</formula>
        <label>Work Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <defaultValue>1</defaultValue>
        <label>No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Charter_Approved_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Charter Approved File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Charter_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Required</inlineHelpText>
        <label>Project Charter File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <inlineHelpText>Required</inlineHelpText>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Justification__c</fullName>
        <inlineHelpText>Required</inlineHelpText>
        <label>Project Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>Project__r.Project_Manager__r.FirstName + &quot; &quot; + Project__r.Project_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <formula>Project__r.Project_Number__c</formula>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Project_Charter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SME</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected User is not SME. Please select SME user.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>PM</value>
            </filterItems>
            <infoMessage>Please select SME user.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Step_1_Project_Charter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Plan__c</fullName>
        <label>Start Plan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submit_Status__c</fullName>
        <label>Submit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Submit_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiting_for_Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiting for Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Process_Status__c</fullName>
        <label>Work Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Work_Process_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Step 1 : Project Charter</label>
    <nameField>
        <displayFormat>WP1-{00000}</displayFormat>
        <label>Process ID</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Step_1_After_Submit</fullName>
        <active>true</active>
        <label>Step 1 : After Submit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Step_1_Before_Submit</fullName>
        <active>true</active>
        <label>Step 1 : Before Submit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Work_Process_Name_For_Not_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISCHANGED (Name ), $Profile.Name=&apos;System Administrator&apos;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You don&apos;t have privilege to change &apos;Work Process Name&apos;</errorMessage>
    </validationRules>
</CustomObject>